prod_snapshot_2015-09-24_1030/objects/Deal_Financials__c.object
<CustomObject>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deals_Sold__c</fullName>
        <label>Deals Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Financials</relationshipLabel>
        <relationshipName>Deal_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchaser_Name__c</fullName>
        <label>Purchaser Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunds_Applied__c</fullName>
        <label>Refunds Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deal Financials</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Deal Financials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>